infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: payments-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: payments
   template:
      metadata:
         labels:
            app: payments
      spec:
         containers:
            - name: payments
              image: chinaemerem/payments
---
apiVersion: v1
kind: Service
metadata:
   name: payments-srv
spec:
   selector:
      app: payments
   type: ClusterIP
   ports:
      - name: orders
        port: 3000
        targetPort: 3000
        protocol: TCP
